# PP1-kolokwium

./: CMakeLists.txt
cmake/: dima.cmake
src/Kolokwium/: CMakeLists.txt  main.cpp
src/Kolokwium/task1/: task1TextInput.c  task1TextInput.h  task1TextInputTests.cpp
src/Kolokwium/task2/: person.h  task2Filtering.c  task2Filtering.h  task2Test.cpp
src/Kolokwium/task3/: task3TextReverse.c  task3TextReverse.h  task3TextReverseTests.cpp
src/Kolokwium/task4/: task4Matrixes.c  task4Matrixes.h  task4MatrixesTests.cpp
src/probne/: CMakeLists.txt  fileNumbers.c  fileNumbers.h  fileNumbersTests.cpp  main.cpp
src/utils/: argumentParsing.cpp  programmerDetails.h
